[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Item.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/PlaceholderItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/command_grid.gd" type="Script" id=3]

[node name="CommandGrid" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_left = 32.0
margin_top = 33.0
margin_right = 768.0
margin_bottom = 447.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="CenterContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 726.0
margin_bottom = 404.0
custom_constants/vseparation = 32
custom_constants/hseparation = 64
columns = 5

[node name="Item1" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 1 )]
visible = false
margin_right = 92.0
margin_bottom = 110.0

[node name="Item2" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 1 )]
visible = false
margin_left = 156.0
margin_right = 248.0
margin_bottom = 110.0

[node name="Item3" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 1 )]
visible = false
margin_left = 312.0
margin_right = 404.0
margin_bottom = 110.0

[node name="Item4" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 1 )]
visible = false
margin_left = 468.0
margin_right = 560.0
margin_bottom = 110.0

[node name="Item5" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 1 )]
visible = false
margin_left = 624.0
margin_right = 716.0
margin_bottom = 110.0

[node name="Item6" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 1 )]
visible = false
margin_right = 92.0
margin_bottom = 110.0

[node name="Item7" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 1 )]
visible = false
margin_right = 92.0
margin_bottom = 110.0

[node name="Item8" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 1 )]
visible = false
margin_right = 92.0
margin_bottom = 110.0

[node name="Item9" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 1 )]
visible = false
margin_right = 92.0
margin_bottom = 110.0

[node name="Item10" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 1 )]
visible = false
margin_right = 92.0
margin_bottom = 110.0

[node name="Item11" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 1 )]
visible = false
margin_right = 92.0
margin_bottom = 110.0

[node name="Item12" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 1 )]
visible = false
margin_right = 92.0
margin_bottom = 110.0

[node name="Item13" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 1 )]
visible = false
margin_right = 92.0
margin_bottom = 110.0

[node name="Item14" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 1 )]
visible = false
margin_right = 92.0
margin_bottom = 110.0

[node name="Item15" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 1 )]
visible = false
margin_right = 92.0
margin_bottom = 110.0

[node name="PlaceholderItem1" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 2 )]

[node name="PlaceholderItem2" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 156.0
margin_right = 248.0

[node name="PlaceholderItem3" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 312.0
margin_right = 404.0

[node name="PlaceholderItem4" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 468.0
margin_right = 560.0

[node name="PlaceholderItem5" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 624.0
margin_right = 716.0

[node name="PlaceholderItem6" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_top = 142.0
margin_bottom = 252.0

[node name="PlaceholderItem7" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 156.0
margin_top = 142.0
margin_right = 248.0
margin_bottom = 252.0

[node name="PlaceholderItem8" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 312.0
margin_top = 142.0
margin_right = 404.0
margin_bottom = 252.0

[node name="PlaceholderItem9" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 468.0
margin_top = 142.0
margin_right = 560.0
margin_bottom = 252.0

[node name="PlaceholderItem10" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 624.0
margin_top = 142.0
margin_right = 716.0
margin_bottom = 252.0

[node name="PlaceholderItem11" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_top = 284.0
margin_bottom = 394.0

[node name="PlaceholderItem12" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 156.0
margin_top = 284.0
margin_right = 248.0
margin_bottom = 394.0

[node name="PlaceholderItem13" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 312.0
margin_top = 284.0
margin_right = 404.0
margin_bottom = 394.0

[node name="PlaceholderItem14" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 468.0
margin_top = 284.0
margin_right = 560.0
margin_bottom = 394.0

[node name="PlaceholderItem15" parent="CenterContainer/MarginContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 624.0
margin_top = 284.0
margin_right = 716.0
margin_bottom = 394.0

[node name="BackgroundDialog" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="CenterDialogContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="CenterDialogContainer"]
margin_left = 300.0
margin_top = 202.0
margin_right = 500.0
margin_bottom = 277.0
window_title = "Remove item"
dialog_text = "Do you want to remove the selected item?"
dialog_autowrap = true

[connection signal="confirmed" from="CenterDialogContainer/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="popup_hide" from="CenterDialogContainer/ConfirmationDialog" to="." method="_on_ConfirmationDialog_popup_hide"]
